[package]
name = "irc"
version = "0.1.0"
edition = "2021"
license = "unlicense"

[lib]
name = "lib_irc"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server/main.rs"

[[bin]]
name = "client"
path = "src/bin/client/main.rs"

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }

